<resources>
    <string name="not_watched">Not Watched</string>
    <string name="i_am_watching">Watching Now!</string>
    <string name="list_add">Add to List</string>
    <string name="add_to_history">Add to History</string>
    <string name="add_to_collection">Add to Collection</string>
    <string name="add_details">Add Details</string>
    <string name="mark_as_watched">Mark as Watched</string>
    <string name="progress">Progress</string>
    <string name="collection">Collection</string>
    <string name="history">History</string>
    <string name="in_collection">Collected</string>
    <string name="in_history">Watched</string>
    <string name="rated_at">Rated at</string>
    <string name="add_to_watchlist">Add to Watchlist</string>
    <string name="select_time">Select Time</string>
    <string name="public_list">Public</string>
    <string name="last_watched">Last Watched: %1$s</string>
    <string name="collected">Collected</string>
    <string name="episode_title_format">%1$s (S:%2$d E:%3$d %4$s)</string>
    <string name="start_date2">Start date:</string>
    <string name="fetching_data">Fetching data…</string>
    <string name="select_options">Select Options</string>
    <string name="movie_collection">Movie Collection</string>
    <string name="show_collection">Show Collection</string>
    <string name="movie_watched">Movie Watched</string>
    <string name="show_watched">Show Watched</string>
    <string name="list_items">List Items</string>
    <string name="fetching_movie_collection">Fetching Movie Collection…</string>
    <string name="fetching_show_collection">Fetching Show Collection…</string>
    <string name="fetching_movie_watched">Fetching Movie Watched…</string>
    <string name="fetching_show_watched">Fetching Show Watched…</string>
    <string name="fetching_history">Fetching History…</string>
    <string name="fetching_rating">Fetching Rating…</string>
    <string name="fetching_watchlist">Fetching Watchlist…</string>
    <string name="fetching_favorite">Fetching Favorite…</string>
    <string name="fetching_lists">Fetching Lists…</string>
    <string name="fetching_list_items">Fetching List Items…</string>
    <string name="fetching_tmdb_data">Fetching TMDB data…</string>
    <string name="episode">Episode</string>
    <string name="show">Show</string>
    <string name="season1">Season</string>
    <string name="hide_the_account_tab_tkt">Hide the \'Account (TRAKT)\' tab</string>
    <string name="search_people">Search People</string>
    <string name="search_movies">Search movies…</string>
    <string name="search_series">Search shows…</string>
    <string name="search_saved">Search saved…</string>
    <string name="error_loading_data">Error</string>
    <string name="season_p">Season %1$d</string>
    <string name="media_details_not_found">Media details not found</string>
    <string name="disable_month">Disable Month</string>
    <string name="select_a_time">Select a time</string>
    <string name="failed_to_sync">Failed to sync %1$s</string>
    <string name="success">Success</string>
    <string name="no">No</string>
    <string name="remove_from_collection">Remove from collection</string>
    <string name="remove_from_collection_confirmation">Are you sure you want to remove this item from your collection?</string>
    <string name="yes">Yes</string>
    <string name="please_select_a_date">Please select a date</string>
    <string name="remove_from_history">Remove from history</string>
    <string name="remove_from_history_confirmation">Are you sure you want to remove this item from your history?</string>
    <string name="season_episode_p">S:%1$d E:%2$d %3$s</string>
    <string name="episode_p">Episode %1$d</string>
    <string name="episode_s">Episode %1$d(S: %2$d)</string>
    <string name="account_swap">Change sync provider</string>
    <string name="failed_to_get_trakt_access">Failed to get Trakt access</string>
    <string name="please_log_in_again_for_trakt">Please log in again to continue using Trakt features</string>
    <string name="general_notifications">General Notifications</string>
    <string name="ep_progress_text">%1$d/%2$d (%3$d left)</string>
    <string name="stats">Stats</string>
    <string name="movies_collected">Movie Collected</string>
    <string name="time_spent">Time Spent</string>
    <string name="imdb" translatable="false">IMDb: %1$s</string>
    <string name="r_tomatoes" translatable="false">R. Tomatoes: %1$s</string>
    <string name="metacritic" translatable="false">Metacritic: %1$s</string>
    <string name="omdb_api_key">OMDB api key</string>
    <string name="omdb_api_key_summary">Set the OMDB api key to display external ratings data</string>
    <string name="born_date_place">Born on %1$s in %2$s</string>
    <string name="born_date">Born on %1$s</string>
    <string name="born_place">Born in %1$s</string>
    <string name="choose_date_type">Choose Date Type</string>
    <string name="sync_provider">Sync Provider</string>
    <string name="text_tkt_credits">This app uses the Trakt API but is not endorsed or certified by Trakt</string>
    <string name="select_default_sync_provider">Select the default sync provider</string>
    <string name="sync_provider2">Sync provider</string>
    <string name="sync_provider_summary_1">Choose your preferred sync provider. You can update this selection later in the settings.</string>
    <string name="sync_local_summary">Data is stored locally. The database can be exported as file and backup to Google Drive also available.</string>
    <string name="sync_trakt_summary">Watchlist, Watch history, Lists, Favorites, Collection, and Ratings are synced with Trakt.</string>
    <string name="sync_tmdb_summary">Watchlist, Lists, Favorites, and Ratings are synced with TMDB</string>
    <string name="sync_provider_summary_2">TMDB serves as the primary data source, and its data is used for synchronization with both TMDB and Trakt. If you choose to use Trakt or TMDB as a sync provider, you must connect your respective account. No account is required for local database.</string>
    <string name="force_local_sync">Enable local sync even if another provider is selected</string>
    <string name="minimal_tkt_sync_desc">This is a streamlined and hassle-free system for syncing data with Trakt. Only entries marked as \"Watched\" in the \"Saved\" section (Movies and Shows) will be synced. If an \"End Watched\" date is provided, it will be used as the watched date. \n\nThis is a one-way sync, meaning data will be sent to Trakt but not retrieved from it. To access your Trakt account data, visit the \"Account\" tab. \n\nFor a minimal sync experience, you can set the default sync provider to \"Local\" and enable this auto-sync method. Once enabled, your data will automatically sync with Trakt daily.</string>
    <string name="sync_with_trakt">Sync with Trakt</string>
    <string name="auto_tkt_des1"> \u24d8 Recommended for users seeking a simplified sync option without full Trakt integration.</string>
    <string name="auto_sync">Auto sync</string>
    <string name="latest">Latest</string>
    <string name="watching_now">WATCHING NOW</string>
    <string name="gen_error_msg">Something went wrong</string>
    <string name="fetching_upcoming">Fetching upcoming movie &amp; shows…</string>
    <string name="mark_as_watched_l">Watched (Local)</string>
    <string name="mark_as_watched_t">Watched (Trakt)</string>
    <string name="mark_as_un_watched_l">Unwatched (Local)</string>
    <string name="mark_as_un_watched_t">Unwatched (Trakt)</string>
    <string name="mark_as">Mark as</string>
    <string name="get_tkt_data">Auto fetch \"Trakt\" data</string>
    <string name="omdb_api_key1">OMDB API Key</string>
    <string name="omdb_api_desc_1">To display ratings from IMDb, Rotten Tomatoes, and Metacritic, you need to enter your OMDB API key. This API key is used to fetch external ratings data.</string>
    <string name="omdb_api_desc2">OMDB API has a free tier for personal use. To get your free API key, follow these steps:</string>
    <string name="omdb_api_desc3">1. Go to the OMDB website: https://www.omdbapi.com/\n2. Click on \'API key\' in the navigation menu.\n3. Sign up for a free account.\n4. Once signed up, your API key will be sent to your email.</string>
    <string name="omdb_api_desc_4">You can also enter your OMDB API key later in the settings.</string>
    <string name="api_key">API Key</string>
    <string name="advanced">Advanced</string>
    <string name="movie_tab_title">Movies</string>
    <string name="series_tab_title">Shows</string>
    <string name="saved_tab_title">Saved</string>
    <string name="title_general">General</string>
    <string name="title_show_cast">Display cast</string>
    <string name="title_show_crew">Display crew</string>
    <string name="title_show_recommendations">Display recommendations</string>
    <string name="title_show_save_dialog">Display save dialog</string>
    <string name="title_persistent_filtering">Persistent filter</string>
    <string name="summary_persistent_filtering">Auto-filter media when starting the app</string>
    <string name="title_show_representation">Media representation</string>
    <string name="title_shows_in_grid">Display media in a grid</string>
    <string name="title_grid_size">Grid size</string>
    <string name="summary_grid_size">Amount of items in a row</string>
    <string name="title_data_usage">Data usage</string>
    <string name="title_live_search">Use live search</string>
    <string name="title_hide_tabs">Tabs visibility</string>
    <string name="summary_hide_tabs">Restart the app to apply changes.</string>
    <string name="title_hide_movies_tab">Hide the \'Movies\' tab</string>
    <string name="title_hide_series_tab">Hide the \'Shows\' tab</string>
    <string name="title_hide_saved_tab">Hide the \'Saved\' tab</string>
    <string name="title_api_language">API language</string>
    <string name="summary_api_language">Set the language of the API data (otherwise defaults to system language).</string>
    <string name="text_tmdb_credits">This product uses the TMDB API but is not endorsed or certified by TMDB</string>
    <string name="cancel">Cancel</string>
    <string name="description">Description</string>
    <string name="create_list">Create List</string>
    <string name="previous_lists">Prior Lists</string>
    <string name="create_new_list">Create New List</string>
    <string name="enter_list_name">Enter List Name</string>
    <string name="private_list">Private</string>
    <string name="account_data_tab_title">Account</string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="refresh_purchase_status">Refresh Status</string>
    <string name="lifetime_patron2">Lifetime Patron</string>
    <string name="lifetime_patron_unavailable">Lifetime Patron (Unavailable)</string>
    <string name="supporter_tier_monthly2">Supporter Tier</string>
    <string name="supporter_tier_unavailable">Supporter Tier (Unavailable)</string>
    <string name="support_showcase">Get Premium</string>
    <string name="support_showcase_desc">Unlock premium features, get priority support, and help keep development going.</string>
    <string name="otp_desc">Make a one-time contribution and use the app free forever with premium features and priority support. Thank you for supporting the project!</string>
    <string name="ms_desc">Get premium features, priority support, and help support ongoing development. Cancel anytime.</string>
    <string name="subscription_auto_renews_monthly">Subscription automatically renews monthly</string>
    <string name="continue_with_ads">Continue for Free</string>
    <string name="ads_desc">Use the app for free. The app is open-source and free to use; Premium is an optional way to support the project.</string>
    <string name="ads_title">Free Tier</string>
</resources>