<?xml version="1.0" encoding="utf-8"?><!--
  ~     This file is part of "ShowCase" formerly Movie DB. <https://github.com/WirelessAlien/MovieDB>
  ~     forked from <https://notabug.org/nvb/MovieDB>
  ~
  ~     Copyright (C) 2024  WirelessAlien <https://github.com/WirelessAlien>
  ~
  ~     ShowCase is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     ShowCase is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with "ShowCase".  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home_selector"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_movie"
        android:icon="@drawable/movie_selector"
        android:title="@string/movie_tab_title" />
    <item
        android:id="@+id/nav_series"
        android:icon="@drawable/tv_selector"
        android:title="@string/series_tab_title" />
    <item
        android:id="@+id/nav_saved"
        android:icon="@drawable/star_selector"
        android:title="@string/saved_tab_title" />
    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/account_selector"
        android:title="@string/account_data_tab_title" />
    <item
        android:id="@+id/nav_account_tkt"
        android:icon="@drawable/account_selector"
        android:title="@string/account_data_tab_title" />
</menu>