<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     This file is part of "ShowCase" formerly Movie DB. <https://github.com/WirelessAlien/MovieDB>
  ~     forked from <https://notabug.org/nvb/MovieDB>
  ~
  ~     Copyright (C) 2024  WirelessAlien <https://github.com/WirelessAlien>
  ~
  ~     ShowCase is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     ShowCase is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with "ShowCase".  If not, see <https://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_tmdb_long"
        android:layout_gravity="center"/>

    <RelativeLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="5dip"
       android:layout_marginBottom="16dip">

       <TextView
           android:id="@+id/previousListText"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/previous_lists"
           android:textSize="20sp"
           android:layout_centerVertical="true"
           android:textStyle="bold" />

       <com.google.android.material.button.MaterialButton
           android:id="@+id/infoBtn"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentEnd="true"
           style="@style/Widget.Material3.Button.IconButton"
           app:icon="@drawable/ic_info"/>
   </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/recyclerView" />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/create_new_list"
      android:textSize="20sp"
      android:layout_marginStart="5dip"
      android:textStyle="bold"
      android:layout_marginTop="16dp"
      android:layout_marginBottom="16dip"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/newListName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_list_name"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/listDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"/>

    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/privateRadioBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/private_list"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="5dp"
        android:text="@string/create_list"
        android:id="@+id/createListBtn"/>
</LinearLayout>